Changes as at 03/01/2020 20:30

--- a/src/main/webapp/resources/templates/main_template.xhtml
+++ b/src/main/webapp/resources/templates/main_template.xhtml
@@ -17,6 +17,10 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link href="./../../resources/css/styles.css" rel="stylesheet" type="text/css"/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <!--<script src="https://unpkg.com/axios/dist/axios.min.js"></script>-->
+<!--        <script src="./../../pages/http/http.js" defer="true"></script>-->
+
     </h:head>
     <h:body styleClass="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -104,7 +108,7 @@ and open the template in the editor.
                     <div class="sb-sidenav-footer">
                         <div class="small">Logged in as:</div>
                         <ui:insert name="screenName">
-                            
+
                         </ui:insert>
                     </div>
                 </nav>
@@ -227,5 +231,6 @@ and open the template in the editor.
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="./../../resources/js/scripts.js" defer="true"></script>
+        <!--<script src="./../../pages/http/http.js"></script>-->
     </h:body>
 </html>
