updates as at 03/09/2020 00:01GMT

--- a/src/main/webapp/resources/templates/main_template.xhtml
+++ b/src/main/webapp/resources/templates/main_template.xhtml
@@ -139,42 +139,17 @@ and open the template in the editor.
                                 <!--Row Data of Main content goes here-->
                                 <!--We shall leave the cards for now and remove it later-->
                                 <div class="row">
-                                    <div class="col-xl-3 col-md-6">
-                                        <div class="card bg-primary text-white mb-4">
-                                            <div class="card-body">Primary Card</div>
-                                            <div class="card-footer d-flex align-items-center justify-content-between">
-                                                <a class="small text-white stretched-link" href="#">View Details</a>
-                                                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-3 col-md-6">
-                                        <div class="card bg-warning text-white mb-4">
-                                            <div class="card-body">Warning Card</div>
-                                            <div class="card-footer d-flex align-items-center justify-content-between">
-                                                <a class="small text-white stretched-link" href="#">View Details</a>
-                                                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-3 col-md-6">
-                                        <div class="card bg-success text-white mb-4">
-                                            <div class="card-body">Success Card</div>
-                                            <div class="card-footer d-flex align-items-center justify-content-between">
-                                                <a class="small text-white stretched-link" href="#">View Details</a>
-                                                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-3 col-md-6">
-                                        <div class="card bg-danger text-white mb-4">
-                                            <div class="card-body">Danger Card</div>
-                                            <div class="card-footer d-flex align-items-center justify-content-between">
-                                                <a class="small text-white stretched-link" href="#">View Details</a>
-                                                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <h1 style="text-decoration: underline">Welcome to AeHS</h1>
+                                </div>
+                                <div class="row">
+                                    <ol>
+                                        <li>Add Farmer Information</li>
+                                        <li>Add Farm Details</li>
+                                        <li>Make Prediction for Plant Diseases</li>
+                                        <li>Manage Saved Plant Diseases Prediction</li>
+                                        <li>General Search for Farm and Predicted Data</li>
+                                        ...
+                                    </ol>
                                 </div>
                             </h:panelGroup>
 
